# EduVid_Factory

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: governance.md  product-proposal.md  system-design.md
docs/diagrams/: c4-component.md  c4-container.md  c4-context.md  data-flow.md  workflow.md
docs/specs/: agent-orchestrator.md  memory-context.md  observability-evals.md  retriever.md  serving-config.md  tools-apis.md
src/: __main__.py  pipeline_orchestrator.py
src/agent/: agent_core.py  llm_client.py  memory.py  prompt_templates.py
src/composition/: video_composer.py
src/generation/: asset_selector.py  audio_generator.py  script_generator.py
src/tools/: search.py
src/utils/: cost_tracker.py  exceptions.py  fact_checker.py  logger.py  validators.py
tests/integration/: test_dry_run.py
tests/unit/: test_agent_core.py  test_cost_tracker.py  test_llm_client.py  test_memory.py  test_search.py  test_validators.py
